# icfpc2020

./: .gitignore  Cargo.toml  README.md  build.sh  run.sh  submit
.circleci/: config.yml
.webui/: main.go
app/: main.rs
app/src/: galaxy_evaluator.rs  galaxy_interpreter.rs  galaxy_transpiler.rs  lib.rs
core/: Cargo.toml
core/src/: galaxy_evaluator.rs  galaxy_interpreter.rs  galaxy_transpiler.rs  lib.rs
interpreter/: Cargo.toml
interpreter/src/: main.rs
pad/: .gitignore  Cargo.toml  README.md
pad/src/: lib.rs
pad/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
scm/: footer.scm  prelude.scm
scripts/: decode  encode  number
ships/: Cargo.toml
ships/src/: command.rs  data.rs  main.rs
webui/: go.mod
