[package]
name = "app"
version = "0.1.0"
authors = []
edition = "2018"

[[bin]]
name = "app"
path = "app/main.rs"

[[bin]]
name = "galaxy_interpreter"
path = "app/src/galaxy_interpreter.rs"

[[bin]]
name = "galaxy_transpiler"
path = "app/src/galaxy_transpiler.rs"

[[bin]]
name = "galaxy_evaluator"
path = "app/src/galaxy_evaluator.rs"

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
hyper = "0.13.5"
http-body = "0.3.1"
failure = "0.1.8"
reqwest = { version = "0.10", features = ["json"] }
