[package]
name = "icfpc2020"
version = "0.1.0"
authors = []
edition = "2018"

[workspace]
members = [
    "core",
    "pad",
    "ships",
    "interpreter",
]

# [[bin]]
# name = "galaxy_interpreter"
# path = "app/src/galaxy_interpreter.rs"

# [[bin]]
# name = "galaxy_transpiler"
# path = "app/src/galaxy_transpiler.rs"

# [[bin]]
# name = "galaxy_evaluator"
# path = "app/src/galaxy_evaluator.rs"
