[package]
name = "ships"
version = "0.1.0"
authors = ["Seikichi KONDO <seikichi@kmc.gr.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }

tokio = { version = "0.2.21", features = ["full"] }
hyper = "0.13.5"
http-body = "0.3.1"
failure = "0.1.8"
reqwest = { version = "0.10", features = ["json", "blocking"] }
log = "0.4.11"
env_logger = "0.7.1"
